<resources>
    <string name="app_name">picky</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="picked">picked !</string>
    <string name="tilt_to_vote">Tilt to Vote</string>
</resources>
